# FastApi

./: README.md
Authentication/fastapi-auth/: README.md  auth.py  database.py  main.py  models.py  pyproject.toml  requirements.txt
FastAPI-05-Database/: README.md  main.py  models.py  pyproject.toml  requirements.txt  schemas.py
